# oidn-protoray

./: .gitignore  CMakeLists.txt  README.md  third-party-programs.txt
.github/workflows/: ci.yml
accel/: embree_intersector.cpp  embree_intersector.h  embree_intersector_packet.h  embree_intersector_single.h  embree_intersector_stream.h
bsdf/: albedo.h  albedo_tables.cpp  albedo_tables.h  beckmann_distribution.h  bsdf.h  coating.h  conductor.h  dielectric.h  diffuse.h  ggx_distribution.h  microfacet.h  multi_bsdf.h  optics.h  rough_coating.h  rough_conductor.h  rough_dielectric.h  rough_diffuse.h  sheen.h  sheen_distribution.h  thin_dielectric.h  thin_rough_dielectric.h  transparent.h
camera/: camera.h  pinhole_camera.h  thin_lens_camera.h
cmake/: FindTBB.cmake
core/: intersector.h  intersector_packet.h  intersector_single.h  intersector_stream.h  ray.h  ray_embree.h  ray_simd.h  ray_stats.h  ray_stream.h  shading_context.h
geometry/: geometry.h  group.h  instance.h  quad.h  triangle.cpp  triangle.h  triangle_mesh.cpp  triangle_mesh.h  triangle_mesh_builder.cpp  triangle_mesh_builder.h  triangle_soup.h  vertex.h
image/: accum_buffer.h  aces_tone_mapper.h  bump.cpp  bump.h  color.cpp  color.h  denoiser.h  filmic_tone_mapper.h  frame_buffer.cpp  frame_buffer.h  image.cpp  image.h  image_io.cpp  image_io.h  image_texture.cpp  image_texture.h  linear_tone_mapper.h  log_tone_mapper.h  morton.cpp  morton.h  oidn_denoiser.cpp  oidn_denoiser.h  pixel.cpp  pixel.h  pixel_filter.h  reinhard_tone_mapper.h  surface.h  texture.h  tone_mapper.h
light/: ambient_light.h  distant_light.h  image_light.h  light.h  sun_sky_light.cpp  sun_sky_light.h  triangle_light.h
light/sky_model/: sky_model.cpp
main/: config.h.in  main.cpp  main.h
main/convert/: convert.cpp  obj_loader.cpp  obj_loader.h
main/render/: input.h  render.cpp  render_window.cpp  render_window.h  stats_recorder.cpp  stats_recorder.h  view.cpp  view.h  window.cpp  window.h
main/sandbox/: sandbox.cpp
material/: car_paint.cpp  car_paint.h  flakes.h  luminous.h  marble.cpp  marble.h  material.cpp  material.h  material_factory.cpp  material_factory.h  material_param.h  medium.h  mtl_loader.cpp  mtl_loader.h  mtl_writer.cpp  mtl_writer.h  principled.cpp  principled.h  standard.cpp  standard.h
math/: affine3.h  basis3.h  box1.h  box2.h  box3.h  fast_box3.h  fast_random.h  fast_random_simd.h  hash.h  integration.h  interpolation.h  mat2.h  mat3.h  mat4.h  math.h  math_avx2.h  math_common.h  math_neon.h  noise.h  random.h  sh.h  simd.h  simd_common.cpp  simd_common.h  vec2.h  vec3.h  vec4.h
math/simd/: vbool16_avx512.h  vbool4_avx.h  vbool4_neon.h  vbool8_avx.h  vbool8_neon.h  vfloat16_avx512.h  vfloat4_avx.h  vfloat4_neon.h  vfloat8_avx2.h  vfloat8_neon.h  vint16_avx512.h  vint4_avx.h  vint4_neon.h  vint8_avx2.h  vint8_neon.h  vuint16_avx512.h  vuint4_avx.h  vuint4_neon.h  vuint8_avx2.h  vuint8_neon.h
render/: ao_hit_integrator_single.h  ao_integrator_packet.h  ao_integrator_single.h  ao_renderer_stream.h  debug_integrator_single.h  device.h  device_cpu.cpp  device_cpu.h  diffuse2_integrator_packet.h  diffuse2_integrator_single.h  diffuse2_renderer_stream.h  diffuse_integrator_packet.h  diffuse_integrator_single.h  diffuse_renderer_stream.h  integrator.h  intersector_factory_packet.cpp  intersector_factory_packet.h  intersector_factory_single.cpp  intersector_factory_single.h  intersector_factory_stream.h  path_integrator_packet.h  path_integrator_single.h  path_renderer_stream.h  po_integrator_packet.h  po_integrator_single.h  primary_integrator_packet.h  primary_integrator_single.h  primary_renderer_stream.h  renderer.h  renderer_factory.cpp  renderer_factory.h  renderer_factory_packet.cpp  renderer_factory_packet.h  renderer_factory_single.cpp  renderer_factory_single.h  renderer_factory_stream.cpp  renderer_factory_stream.h  renderer_packet.h  renderer_single.h  renderer_stream.h  (+3 more)
rkscene/: rkscene.h  rkscene_gltf.h
sampling/: distribution1d.cpp  distribution1d.h  distribution2d.cpp  distribution2d.h  random_sampler.h  random_sampler_simd.h  shape_sampler.h  sobol_burley.cpp  sobol_burley.h  sobol_burley_sampler.h  sobol_burley_sampler_simd.h  sobol_sampler.h  sobol_sampler_simd.h
sys/: array.h  atomic.h  blob.h  common.h  condition.h  constants.h  file.cpp  file.h  filesystem.cpp  filesystem.h  fixed_hash_map.h  lock_guard.h  logging.cpp  logging.h  mapped_file.cpp  mapped_file.h  memory.cpp  memory.h  mutex.h  option.cpp  option.h  props.h  raw_array.h  static_array.h  stream.h  string.cpp  string.h  sysinfo.cpp  sysinfo.h  tasking.cpp  tasking.h  text_reader.cpp  text_reader.h  tick_counter.h  timer.h  value.h
